objects/sf_devops__Vcs_Event__c.object
<CustomObject>
    <description>External events received from the external version control system.</description>
    <fields>
        <fullName>sf_devops__Event_Date__c</fullName>
        <description>The date and time this event occurred in the version control system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf_devops__Event_Id__c</fullName>
        <description>The unique ID of this event in the remote VCS</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Event Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf_devops__Handled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this VCS Event been handled by the DevOps Center?</description>
        <inlineHelpText>Managed by the DevOps Center, when this VCS Event has been handled/resolved, this value will be updated to true automatically.</inlineHelpText>
        <label>Handled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_devops__Operation_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The AOR referencing the current ongoing operation of this VCS Event, if one exists.</description>
        <label>Operation Status</label>
        <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
        <relationshipLabel>VCS Events</relationshipLabel>
        <relationshipName>VCS_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Payload__c</fullName>
        <description>The event payload, sent from the version control system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf_devops__Repository__c</fullName>
        <description>The VCS repository that was the source of this VCS Event.</description>
        <label>Repository</label>
        <referenceTo>sf_devops__Repository__c</referenceTo>
        <relationshipLabel>Vcs Events</relationshipLabel>
        <relationshipName>Vcs_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>sf_devops__Source_Branch__c</fullName>
        <description>For events that reference 2 branches, this is the source branch of the operation.  As an example, an event about a change request.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Target_Branch__c</fullName>
        <description>The name of the branch that this event is targeting</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Target Branch</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Target_Pipeline_Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Pipeline Stage record that this VCS Event applies to.</description>
        <label>Target Pipeline Stage</label>
        <referenceTo>sf_devops__Pipeline_Stage__c</referenceTo>
        <relationshipLabel>VCS Events</relationshipLabel>
        <relationshipName>VCS_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Target_Work_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Work Item record that this VCS Event applies to.</description>
        <label>Target Work Item</label>
        <referenceTo>sf_devops__Work_Item__c</referenceTo>
        <relationshipLabel>Vcs Events</relationshipLabel>
        <relationshipName>VCS_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>VCS Event</label>
    <nameField>
        <displayFormat>VCSE-{0}</displayFormat>
        <label>VCS Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VCS Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sf_devops__Disable_Handled</fullName>
        <active>true</active>
        <description>A VCS Event cannot have its Handled__c field disabled once set.</description>
        <errorConditionFormula>AND(PRIORVALUE(sf_devops__Handled__c), ISCHANGED(sf_devops__Handled__c))</errorConditionFormula>
        <errorMessage>A VCS Event cannot have its Handled__c field disabled once set.</errorMessage>
    </validationRules>
</CustomObject>